# rapp-play-pokemon

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  agent.py  bootstrap.sh  config.example.json  launch.sh  pyproject.toml  requirements-rapp.txt  uninstall.sh
.github/workflows/: ci.yml
scripts/: check_public_artifacts.py
src/rapp_play_pokemon/: __init__.py  brainstem.py  cli.py  upload.py
tests/: conftest.py  test_agent.py  test_product.py
